Resolved overflow of long playlist names

--- a/client/src/app/modules/index/home/components/home/home.component.css
+++ b/client/src/app/modules/index/home/components/home/home.component.css
@@ -37,6 +37,7 @@
   width: 200px;
 }
 #selected_name h5 {
+  width: fit-content;
   white-space: nowrap;
 }
 
@@ -136,4 +137,64 @@
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+  width: 150px;
+}
+
+.marquee {
+  -moz-animation: marquee 12s linear infinite alternate;
+  -webkit-animation: marquee 12s linear infinite alternate;
+  animation: marquee 12s linear infinite alternate;
+}
+
+@-moz-keyframes marquee {
+  0% {
+    -moz-transform: translateX(0);
+  }
+  15% {
+    -moz-transform: translateX(0%);
+  }
+  85% {
+    -moz-transform: translateX(-100%);
+  }
+  100% {
+    -moz-transform: translateX(-100%);
+  }
+}
+
+@-webkit-keyframes marquee {
+  0% {
+    -webkit-transform: translateX(0);
+  }
+  15% {
+    -webkit-transform: translateX(0%);
+  }
+  85% {
+    -webkit-transform: translateX(-100%);
+  }
+  100% {
+    -webkit-transform: translateX(-100%);
+  }
+}
+
+@keyframes marquee {
+  0% {
+    -moz-transform: translateX(0);
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+  15% {
+    -moz-transform: translateX(0%);
+    -webkit-transform: translateX(0%);
+    transform: translateX(0%);
+  }
+  85% {
+    -moz-transform: translateX(-100%);
+    -webkit-transform: translateX(-100%);
+    transform: translateX(calc(-100% + 200px));
+  }
+  100% {
+    -moz-transform: translateX(-100%);
+    -webkit-transform: translateX(-100%);
+    transform: translateX(calc(-100% + 200px));
+  }
 }
